# hiresquire-python

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  llms-full.txt  llms.txt  pyproject.toml  python_test_results.txt
.github/workflows/: publish.yml
examples/: README.md  autogen_recruiter.py  crewai_recruiter.py
hiresquire/: __init__.py  tools.py
tests/: test_sdk.py
