[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hiresquire"
version = "1.2.2"
description = "HireSquire SDK - AI-powered candidate screening for agents and humans"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "HireSquire Team", email = "info@hiresquireai.com"}
]
keywords = ["hiresquire", "langchain", "autogen", "crewai", "ai", "hiring", "recruitment", "screening", "resume", "mcp", "autonomous-agent", "ai-agent", "hr", "candidate-scoring", "interview-scheduling"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.9"
dependencies = [
    "langchain-core>=0.1.0",
    "requests>=2.28.0",
]

[project.optional-dependencies]
pdf = ["pypdf>=4.0.0"]
docx = ["python-docx>=0.8.0"]
all = ["pypdf>=4.0.0", "python-docx>=0.8.0"]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://hiresquireai.com"
Documentation = "https://hiresquireai.com/docs/api"
AgentDocs = "https://hiresquireai.com/docs/agents"
Repository = "https://github.com/hiresquire/hiresquire-python"
Issues = "https://github.com/hiresquire/hiresquire-python/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["hiresquire*"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]
